Fix showcase card sizes on Safari

--- a/pages/showcase/showcase.scss
+++ b/pages/showcase/showcase.scss
@@ -77,8 +77,9 @@ h1 {
 	}
 }
 
-a:has(.showcase-card) {
+.showcase-link-wrapper {
 	transition: transform 100ms ease-in-out;
+	height: 100%;
 
 	&:focus,
 	&:hover {
@@ -106,8 +107,8 @@ a:has(.showcase-card) {
 	padding: 10px;
 	border-radius: 8px;
 
-	height: -webkit-fill-available;
-	height: fill-available;
+	box-sizing: border-box;
+	height: 100%;
 
 	.thumbnail {
 		width: 100%;
